# AgentMon-League

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package.json  pnpm-lock.yaml  railway.json  railway.toml  tsconfig.json  vitest.config.ts
docs/: AGENTS_EMULATOR.md  AGENTS_OVERVIEW.md  DEPLOYMENT.md  EMULATOR_MAP_AND_TILES_FEASIBILITY.md  POKEAPI_ASSESSMENT.md  (+7 more)
test-agents/: .env.example  .gitignore  README.md  agentmongenesis_cli.py  genesis_telegram_bot.py  minimal_agent.py  play_with_openai.py  play_with_pokered_model.py  pyproject.toml  railway.json  requirements-pokered.txt  train_from_play.py  train_minimal_rl_model.py  train_rl_agent.py
test-agents/agentmon_genesis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test-agents/agentmon_test_agents.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test-agents/bug_catcher/: README.md  __init__.py  api_client.py  cli.py  config.py  llm.py  memory_update.py  moltbook_bootstrap.py  moltbook_client.py  moltbook_post_general.py  moltbook_reply.py  play_loop.py  storage.py
test-agents/bug_catcher/agent/: AGENT.md  MEMORY.md  SOUL.md  USER.md  WORLD.md
test-agents/bug_catcher/agent/skills/: gaming_discuss.md  moltbook.md  play_pokemon.md
test-agents/bug_catcher/agent/tools/: bulbapedia.json  emulator.json  play_game.json
test-agents/pokered_models/runs/: .gitkeep
test-agents/rl_agent/: __init__.py  api_client.py  checkpoints.py  config.py  env.py  obs_reward.py  play_loop.py
(+142 files in other folders)
